<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Spiro Customer</string>
    <string name="getappinfohit">getappinfohit</string>
    <string name="getapplanuage" translatable="false">getapplanuage</string>
    <string name="getservicelocationresponse">getservicelocationresponse</string>
    <string name="docpendingstage">iamhavingtrip</string>
    <string name="locationn">Location</string>
    <string name="intent_putextra_api_key">api_name</string>
    <string name="onlinestatuysupdate">onlinestatuysupdate</string>
    <string name="registerpageoneapi">online_drivers_api</string>
    <string name="updatemobilenumber">updatemobilenumber</string>
    <string name="updateemailidalone">updateemailidalone</string>
    <string name="tripservice">tripservice</string>
    <string name="wallettransactions" translatable="false">wallettransactions</string>
    <string name="startfirstorlast">startfirstorlast</string>
    <string name="startlast">startlast</string>
    <string name="updateemailidalonewithotp">updateemailidalonewithotp</string>
    <string name="resendotp">resendotp</string>
    <string name="profilesaveapi">profileapi</string>
    <string name="categoryfetchapi">categoryfetchapi</string>
    <string name="locationfetchapi">locationfetchapi</string>
    <string name="steponeapi">steponeapi</string>
    <string name="steptwoapi">steptwoapi</string>
    <string name="finalcalltohomepage">finalcalltohomepage</string>
    <string name="imageupload">imageupload</string>
    <string name="finaldocument">finaldocument</string>
    <string name="basicdriverprofileupdate">basicdriverprofileupdate</string>
    <string name="finaldocumentupload">finaldocumentupload</string>
    <string name="chatmessageurl">chatmessageurl</string>
    <string name="starverficationapi">startverficationapi</string>
    <string name="reuploadapi">reuploadapi</string>
    <string name="mapfailedtointernet">mapfailedtointernet</string>
    <string name="driveravailable">driveravailable</string>
    <string name="retrievetripdetail">retrievetripdetail</string>
    <string name="retrievetripdetailfully">retrievetripdetailfully</string>
    <string name="logoutcallapi">logoutcallapi</string>
    <string name="dashboarapicall">dashboarapicall</string>
    <string name="loadme">loadme</string>
    <string name="routeapicall">routeapicall</string>
    <string name="getvehiclelist">getvehiclelist</string>
    <string name="reroutingapicall">reroutingapicall</string>
    <string name="hitnearingapi">hitnearingapi</string>
    <string name="tripupdate">tripupdate</string>
    <string name="acknowlcall">acknowlcall</string>
    <string name="acceptcall">acceptcall</string>
    <string name="ridedetails">ridedetailss</string>
    <string name="cancelreason">cancelreason</string>
    <string name="cancelthisride">cancelthisride</string>
    <string name="verifyvehiclenumber">verifyvehiclenumber</string>
    <string name="fcmcancel">fcmcancel</string>
    <string name="checkinuserexist">checkinuserexist</string>
    <string name="updatemobilewitotp">updatemobilewitotp</string>
    <string name="getmakemodelyear">getmakemodelyearapi</string>
    <string name="skiprating">skiprating</string>
    <string name="cashreceived">cash received</string>
    <string name="defaultvehicleupdte">defaultvehicleupdte</string>
    <string name="getvehicleinfoforedit">getvehicleinfoforedit</string>
    <string name="getdriverdocument">getdriverdocument</string>
    <string name="getonlymake">getonlymake</string>
    <string name="emailcheckk">emailcheckk</string>
    <string name="amazonimageuploaded">amazonimageuploaded</string>
    <string name="getlocation">getlocation</string>
    <string name="gettingridecurrentlocation">gettingridecurrentlocation</string>
    <string name="routeKey">AIzaSyBjOJ79xpH-SVeN167QxJY4dJREIqzGQlU</string>
    <string name="routeKeynew" translatable="false">AIzaSyBqaj6IjQPjaQ7ahlVe5ulccfOpBqoAz2s</string>
    <string name="amazonbucketurl">https://meletric-casperon-co-s82kds8.s3.us-east-1.amazonaws.com/documentsFiles/</string>
    <string name="amazonbucketurlvehicle">https://meletric-casperon-co-s82kds8.s3.us-east-1.amazonaws.com/vehicleImage/</string>
    <string name="amaozonurlprofileimage">https://meletric-casperon-co-s82kds8.s3.us-east-1.amazonaws.com/driversPicture/</string>
    <string name="amaozonurlswapstationimage" translatable="false">"https://s3.amazonaws.com/mautoafrica-s3kd8/stationPictures/</string>
    <string name="mapkey">AIzaSyDFeYPYnXF8oYJzcALj96zEh66Cgkm9_AE</string>
    <string name="settings">Location Problem</string>
    <string name="slide_to_rating">SLIDE TO RATING</string>
    <string name="collect_below_amount">Collect Below Amount</string>
    <string name="trip_amount">Trip Amount</string>
    <string name="send">SEND</string>
    <string name="template1">Hi. This is your driver I am waiting outside.</string>
    <string name="template2">Hi. I will reach your stop in few mins.</string>
    <string name="template3">Due to traffic reaching your stop will take some time.</string>
    <string name="template4">Your number is not reachabale?</string>
    <string name="template5">Hi Cant reach your stop vehicle repaired on the way</string>
    <string name="template6">Sorry Cant get your location , Jut Help me to find out?</string>
    <string name="mobilechan">Mobile time not matches with server time.</string>
    <string name="your_phone_date_is_inaccurate_adjust_your_clock_and_try_again">Your phone date is inaccurate.Adjust your clock and try again.</string>
    <string name="your_phone_date_and_time_is">Your phone date and time is</string>
    <string name="book_now_google_marker_pickup_label" translatable="false">pickup</string>
    <string name="book_now_google_marker_drop_label" translatable="false">drop</string>
    <string name="amazonbucketurlNew" translatable="false">https://meletric-casperon-co-s82kds8.s3.us-east-1.amazonaws.com/</string>
    <string name="preferred_language">LANGUE PRÉFÉRÉE</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="upload_your_profile_photo">Upload your profile photo</string>
    <string name="uploadmer">Upload</string>
    <string name="close">Close</string>
    <string name="backside">Backside Image</string>
    <string name="frontside">Frontside Image</string>
    <string name="expirydate">Expiry Date</string>
    <string name="selectexpirydate">Choose Expiry Date</string>
    <string name="account_number" translatable="false">Enter Document Number</string>
    <string name="nofielchoosen">No file choosen</string>
    <string name="choosefile">Choose File</string>
    <string name="Change_Password" translatable="false">Changer le mot de passe</string>
    <string name="Old_Password" translatable="false"> Ancien mot de passe</string>
    <string name="New_Password" translatable="false"> Nouveau mot de passe</string>
    <string name="Confirm_Password" translatable="false"> Confirmez le mot de passe</string>
    <string name="Done" translatable="false">Fait</string>
</resources>