<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:id="@+id/progress_time_password"
        android:indeterminate="true"
        android:visibility="gone"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/newcolorgreen"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_4sdp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/batery_low_lay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/buttonbackground"
        android:paddingVertical="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backbutton"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_back_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/batery_low_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Change_Password"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>








<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/_40sdp"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_below="@+id/batery_low_lay"
    android:layout_marginEnd="@dimen/_20sdp"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Old_Password"
        android:textColorHint="@color/spiro_blue"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/editTextTextPasswordone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/New_Password"
        android:textColorHint="@color/spiro_blue"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextTextPasswordtwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Confirm_Password"
        android:textColorHint="@color/spiro_blue"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPassword" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordtwo"
        android:layout_height="@dimen/_40sdp">
        <LinearLayout
            android:id="@+id/changepassword_lays"
            android:layout_width="match_parent"
            android:background="@color/spiro_blue"
            android:gravity="center"
            android:layout_height="@dimen/_40sdp">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/Done"
                android:textSize="@dimen/_15sdp"
                android:fontFamily="@font/sfuidisplaymedium"
                android:textColor="@color/white"
                android:layout_height="wrap_content"></TextView>
        </LinearLayout>


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/appversionnews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="version"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>