<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="top"
    android:gravity="top"
    android:weightSum="2"
    android:background="@color/colorwhite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:background="@color/colorwhite"
        android:layout_gravity="top"
        android:gravity="top"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:visibility="gone"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_2sdp"
                android:layout_gravity="center|left"
                android:gravity="center|left"
                android:maxLines="1"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_weight="2"
                android:layout_marginRight="@dimen/_30sdp"
                android:ellipsize="end"
                android:textColor="@color/colorblack"
                android:text="@string/profile_photo"
                android:textStyle="bold"
                android:textSize="@dimen/_19sdp"
                />

            <TextView
                android:id="@+id/subcontent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_2sdp"
                android:layout_gravity="center|left"
                android:gravity="center|left"

                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_weight="2"
                android:layout_marginRight="@dimen/_30sdp"
                android:ellipsize="end"
                android:textColor="@color/theme_gray"
                android:text="@string/upload_your_profile_photo"
                android:textSize="@dimen/_15sdp"
                />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@color/colorlightwhite"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp">

        </LinearLayout>



        <LinearLayout
            android:id="@+id/fronside"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_2sdp"
                android:layout_gravity="center|left"
                android:gravity="center|left"
                android:maxLines="2"
                android:fontFamily="@font/sfuidisplayregular"
                android:layout_weight="2"
                android:layout_marginRight="@dimen/_30sdp"
                android:ellipsize="end"
                android:textColor="@color/lightblcak"
                android:text="@string/frontside"
                android:textSize="@dimen/_15sdp"
                />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/choosefilefrontside"
                    style="@style/textviewnormal"
                    android:layout_width="wrap_content"
                    android:singleLine="false"
                    android:padding="@dimen/_5sdp"
                    android:background="@drawable/buttonbackground"
                    android:layout_gravity="center|left"
                    android:gravity="center|left"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorwhite"
                    android:textSize="@dimen/_15sdp"
                    android:text="@string/choosefile" />


                <TextView
                    android:id="@+id/nofilefronside"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/textviewnormal"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:textAllCaps="false"
                    android:layout_gravity="center|left"
                    android:gravity="center|left"
                    android:textSize="@dimen/_14sdp"
                    android:singleLine="false"
                    android:maxLines="2"
                    android:text="@string/nofielchoosen" />



            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:id="@+id/backside"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_2sdp"
                android:layout_gravity="center|left"
                android:gravity="center|left"
                android:maxLines="2"
                android:fontFamily="@font/sfuidisplayregular"
                android:layout_weight="2"
                android:layout_marginRight="@dimen/_30sdp"
                android:ellipsize="end"
                android:textColor="@color/lightblcak"
                android:text="@string/backside"
                android:textSize="@dimen/_15sdp"
                />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/choosefilebackside"
                    style="@style/textviewnormal"
                    android:layout_width="wrap_content"
                    android:singleLine="false"
                    android:padding="@dimen/_5sdp"
                    android:background="@drawable/buttonbackground"
                    android:layout_gravity="center|left"
                    android:gravity="center|left"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorwhite"
                    android:textSize="@dimen/_15sdp"
                    android:text="@string/choosefile" />


                <TextView
                    android:id="@+id/nofilebackside"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/textviewnormal"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:textAllCaps="false"
                    android:layout_gravity="center|left"
                    android:gravity="center|left"
                    android:textSize="@dimen/_14sdp"
                    android:singleLine="false"
                    android:maxLines="2"
                    android:text="@string/nofielchoosen" />



            </LinearLayout>




        </LinearLayout>
        <LinearLayout
            android:layout_marginRight="@dimen/_25sdp"
            android:id="@+id/dateall"
            android:layout_width="fill_parent"
            android:weightSum="2"
            android:orientation="vertical"
            android:layout_gravity="center|top"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="wrap_content">



            <TextView
                android:layout_marginLeft="@dimen/_2sdp"
                android:id="@+id/expirydate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfuidisplayregular"
                android:textColor="@color/colorblack"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:textSize="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/selectexpirydate"
                />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_weight="2"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/expirydateclick"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sfuidisplayregular"
                    android:layout_weight="2"
                    android:textAllCaps="false"
                    android:textColorHint="@color/colorblack"
                    android:textSize="@dimen/_14sdp"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:gravity="center|left"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:hint="@string/expirydate"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginRight="@dimen/_25sdp"
            android:id="@+id/dateall_one"
            android:layout_width="fill_parent"
            android:weightSum="2"
            android:orientation="vertical"
            android:layout_gravity="center|top"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="wrap_content">



            <TextView
                android:layout_marginLeft="@dimen/_2sdp"
                android:id="@+id/account_number_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfuidisplayregular"
                android:textColor="@color/colorblack"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:textSize="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/account_number"
                />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_weight="2"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/accountnumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sfuidisplayregular"
                    android:layout_weight="2"
                    android:textAllCaps="false"
                    android:textColorHint="@color/colorblack"
                    android:textSize="@dimen/_14sdp"
                    android:hint="Type Your Document Number"
                    android:inputType="number"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:gravity="center|left"
                    android:layout_marginLeft="@dimen/_4sdp"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/colorlightwhite"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp">

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/ok"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/buttonbackground"
                android:orientation="horizontal"
                android:padding="@dimen/_15sdp"
                android:gravity="center|left"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/_10sdp"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView

                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_2sdp"
                    android:background="@null"
                    android:maxLines="2"
                    android:text="@string/uploadmer"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColorHint="@color/theme_gray"
                    android:textColor="@color/colorblack"
                    android:textSize="@dimen/_13sdp"
                    android:singleLine="false"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/close"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/buttonbackground"
                android:orientation="horizontal"
                android:padding="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:gravity="center|left"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView

                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_2sdp"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/close"
                    android:maxLines="2"
                    android:textColorHint="@color/theme_gray"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp"
                    android:singleLine="false"
                    android:textStyle="bold" />
            </LinearLayout>



        </LinearLayout>
    </LinearLayout>





</LinearLayout>

